          cycle. The 'status' command now checks for this and warns if the
          format is unsuitable and 'commit' will refuse to operate with an
          unsuitable format.

        - The output of the 'status' and 'log' commands has changed to align
          with the new information displayed by 'commit' so that all three
          commands display revisions similarly.

        New features

        - New automation command 'update' which behaves identical to
          the normal 'update' command.

        - Many commands that change the heads of a branch (approve, disapprove,
          pull, merge, etc) can now take an option "--update". If run from
          a workspace which is based on a head of the branch and has no local
          changes, this option makes these commands update that workspace to
          the new head. If you always want this behavior, you can define the
             get_default_command_options(cmd)
          hook in your monotonerc.

        - A new Lua extension function change_workspace(directory) has been
          added. This should be most useful for custom commands which need
          to work on multiple workspaces from the same monotone instance.

        - There is also the new server_set_listening(bool) Lua extention
          function available since 0.47, which can be used to let a monotone
          server exit gracefully instead of having to be killed.

        - Default include and exclude patterns are now remembered per server.
          This means that you can have for example one server that you sync
          everything to, and one that you only sync some branches to, and you
          don't have to worry about forgetting to give the include pattern and
          accidentally trying to sync everything to the second server.

        Bugs fixed

        - A regression in 0.47 prevent successful execution of push / pull /
          sync over pipes (Debian bug 574512); this has been fixed.
