@@ -31,6 +31,11 @@ xxx xxx xx xx:xx:xx UTC 2010
           with the new information displayed by 'commit' so that all three
           commands display revisions similarly.
 
+        - Monotone will only warn about bad certs if there are not also matching
+          trusted certs. So if someone commits a bad branch cert, monotone will
+          only warn about that bad cert until someone else approves that
+          revision into the same branch.
+
         New features
 
         - New automation command 'update' which behaves identical to
